charts/loki-kustomize/overlays/dev/fag-ingress-grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-fag-order-gateway
namespace: loki
spec:
  ingressClassName: nginx
  rules:
    - host: www.grafana.sklrsn.in
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: loki-grafana
                port:
                  number: 80
            path: /
  tls:
    - hosts:
        - www.grafana.sklrsn.in
      secretName: tls-secret-nginx-grafana
